--- a/css/styles.css
+++ b/css/styles.css
@@ -4,32 +4,50 @@
   --secondary-font: "Raleway", sans-serif;
   /* Color */
   --main-txt-cl: #555555;
+  --main-bg-cl: #111319;
   --secondary-txt-cl: #303030;
   --light-txt-cl: #ffffff;
   --accent-txt-cl: #ff6c00;
   --accent-bg-cl: #ff6c00;
+
   /* Other */
 }
-
 /* Base styles */
 body {
-  background-color: #ffff;
-  font-family: Open Sans;
+  font-family: var(--primary-font);
   font-size: 16px;
   line-height: 1.67;
   letter-spacing: 0.02em;
   color: var(--main-txt-cl);
 }
+/* reset start */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0px;
+}
+img {
+  display: block;
+}
+button {
+  cursor: pointer;
+}
 .list {
   list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 .link {
+  color: inherit;
   text-decoration: none;
-  color: var(--main-txt-cl);
 }
 .visually-hidden {
   position: Absolute;
-  widths: 1px;
+  width: 1px;
   height: 1px;
   margin: -1px;
   padding: 0;
@@ -38,8 +56,18 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
+.section {
+  padding: 120px 0;
+}
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  outline: 2px solid red;
+  outline-offset: -2px;
+}
 .uppertitle {
+  margin-bottom: 20px;
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
@@ -47,57 +75,41 @@ body {
   color: var(--secondary-txt-cl);
 }
 .title {
+  margin-bottom: 20px;
   font-family: var(--secondary-font);
+  font-weight: 700;
   font-size: 42px;
-  line-height: 1.17;
+  line-height: 49px;
   letter-spacing: 0.05em;
-  color: var(--secondary-txt-cl);
+  color: var(--main-txt-cl);
 }
 .title-light {
+  margin-bottom: 44px;
   color: var(--light-txt-cl);
 }
-.btn {
-  font-family: inherit;
-}
-
-/* Header */
-.header {
-  background-color: #111319;
-}
-.header-logo {
-}
-.header-logo-img {
-}
-.header-nav {
-}
-.header-nav-list {
-}
-.header-nav-item {
-}
-.header-nav-link,
-.header-contact {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.1em;
-  color: var(--light-txt-cl);
-}
-.header-nav-link:hover,
-.header-nav-link:focus,
-.header-contact:hover,
-.header-contact:focus {
-  color: var(--accent-bg-cl);
+.main-text {
+  font-family: var(--primary-font);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--main-txt-cl);
 }
 .btn {
+  min-width: 160px;
+  min-height: 40px;
+  padding: 11px 19px;
   font-family: inherit;
   font-weight: 600;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.09em;
   text-transform: uppercase;
-  color: var(--secondary-txt-cl);
+  color: var(--light-txt-cl);
   background-color: transparent;
   cursor: pointer;
+  border: 1px solid #ff6c00;
+  border-radius: 25px;
 }
 
 .btn:hover,
@@ -105,63 +117,233 @@ body {
   color: var(--light-txt-cl);
   background-color: var(--accent-bg-cl);
 }
-.btn-light {
+
+/* Header */
+.header {
+  padding-top: 22px;
+  padding-bottom: 22px;
+  background-color: var(--main-bg-cl);
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
+  margin-right: 124px;
+}
+.header-logo-img {
+}
+.header-nav {
+  margin-right: auto;
+}
+.header-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.header-nav-item {
+}
+.header-nav-link,
+.header-contact {
+  display: block;
+  padding: 30px 0;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.1em;
   color: var(--light-txt-cl);
+}
+.header-contact {
+  margin-right: 40px;
+}
+.header-nav-link:hover,
+.header-nav-link:focus,
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--accent-txt-cl);
 }
 /* Hero */
 .hero {
   background-color: #111319;
 }
+.main-title {
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 1.18;
+  letter-spacing: 0.05em;
+  color: var(--light-txt-cl);
+}
+.media-links {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: var(--secondary-txt-cl);
+}
+.media-links:hover,
+.media-links:focus {
+  color: var(--accent-txt-cl);
+}
+
 /* About */
 .about {
 }
+.about-container {
+  display: flex;
+  gap: 30px;
+}
 .about-list {
+  display: flex;
+  gap: 30px;
 }
 .about-item {
 }
-.about-desc {
+.about-img {
 }
-
-.about-btn {
+.about-right-side {
+  width: 470px;
+}
+.about-desc {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.02em;
+  color: var(--main-txt-cl);
+}
+.btn-white {
+  color: var(--main-txt-cl);
 }
 
 /* Services and Prices */
 .prices {
   background-color: #111319;
 }
-
 #services-and-prices {
 }
 .prices-list {
 }
 .prices-item {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
 }
-.prices-btn {
+.sap-btn {
+  color: var(--light-txt-cl);
 }
 
 /* Benefits Section */
 .benefits {
 }
+
 .benefits-list {
 }
 .benefits-item {
+  background: #f7f7f7;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
 }
 .benefits-value {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: var(--secondary-txt-cl);
 }
 .benefits-sup {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.38;
+  text-align: center;
+  color: var(--accent-txt-cl);
 }
-.benefits-tex {
-}
-
-.benefits-header {
-}
-.benefits-desc {
+.benefits-text {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.37;
+  text-align: center;
+  color: var(--secondary-txt-cl);
 }
 /* Barbers section */
-
+.barbers-section {
+  background: #f7f7f7;
+}
+.barbers-name {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--secondary-txt-cl);
+}
+.barbers-extreme {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--accent-txt-cl);
+}
 /* Gallery section */
 /* Booking section */
 /* Contacts */
 .contacts {
   background-color: #111319;
+}
+
+.contacts-adress {
+  font-family: var(--primary-font);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+.contacts-info {
+  font-family: var(--primary-font);
+  font-weight: 400px;
+  font-size: 18px;
+  line-height: 1.67;
+  align-items: center;
+  letter-spacing: 0.02em;
+  color: #9da4bd;
+}
+/* Footer */
+.footer-copyright {
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: #9da4bd;
+}
+.footer-btn {
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  letter-spacing: 0.2em;
+  color: var(--secondary-txt-cl);
+}
+.footer-btn:hover,
+.footer-btn:focus {
+  color: var(--accent-txt-cl);
 }
