--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --accent-txt-cl: #ff6c00;
   --accent-bg-cl: #ff6c00;
   --uppertitle-grey-cl: rgba(157, 164, 189, 0.6);
+  --gray-cl-60: #9da4bd99;
   /* Other */
   --indent: 30px;
   --items: 3;
@@ -70,6 +71,9 @@ button {
   outline-offset: -2px;
 }
 .uppertitle {
+  display: flex;
+  align-items: center;
+  gap: 20px;
   margin-bottom: 20px;
   font-weight: 600;
   font-size: 11px;
@@ -77,8 +81,18 @@ button {
   text-transform: uppercase;
   color: var(--secondary-txt-cl);
 }
+.uppertitle::before {
+  display: block;
+  content: " ";
+  width: 60px;
+  height: 1px;
+  background-color: var(--secondary-txt-cl);
+}
 .uppertitle-light {
   color: var(--grey-cl);
+}
+.uppertitle-light::before {
+  background-color: var(--gray-cl-60);
 }
 .title {
   margin-bottom: 20px;
@@ -149,6 +163,7 @@ button {
   margin-right: 124px;
 }
 .header-logo-img {
+  fill: var(--secondary-txt-cl);
 }
 .header-nav {
   margin-right: auto;
@@ -181,15 +196,39 @@ button {
 }
 /* Hero */
 .hero {
-  background-color: #111319;
 }
-.main-title {
+.hero-container {
+  display: flex;
+}
+.hero-leftside {
+  width: 100px;
+}
+.hero-rightside {
+  flex-grow: 1;
+  padding-top: 272px;
+  padding-bottom: 208px;
+  padding-left: 100px;
+  background-color: #111319;
+  background-image: linear-gradient(
+      rgba(25, 28, 38, 0.2),
+      rgba(25, 28, 38, 0.2)
+    ),
+    url(../images/hero/slider-img-3.jpg);
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.hero-title {
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 72px;
   line-height: 1.18;
   letter-spacing: 0.05em;
   color: var(--light-txt-cl);
+  margin-bottom: 20px;
+}
+.hero-text {
+  width: 360px;
 }
 .media-links {
   font-family: "Open Sans";
@@ -203,6 +242,10 @@ button {
 .media-links:hover,
 .media-links:focus {
   color: var(--accent-txt-cl);
+}
+
+.hero-controls {
+  display: none;
 }
 /* About */
 .about {
@@ -234,16 +277,26 @@ button {
   color: var(--main-txt-cl);
 }
 /* Services and Prices */
-.prices {
-  background-color: #111319;
+.price {
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: var(--main-bg-cl);
+  background-image: url(../images/price/bg-img1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-.prices-list {
+.price-list {
   margin-bottom: 44px;
   display: flex;
   justify-content: space-between;
 }
-.prices-item {
+.price-item:first-child {
+  background: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+.price-item:last-child {
+  background: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
 }
 .price-inner-list {
   width: 570px;
@@ -251,10 +304,25 @@ button {
   outline: 2px solid red;
   outline-offset: -2px;
 }
+.price-inner-item {
+  display: flex;
+  align-items: baseline;
+  gap: 12px;
+}
+.price-inner-item::before {
+  content: " ";
+  height: 1px;
+  background-color: rgba(157, 164, 189, 0.2);
+  flex-grow: 1;
+}
 .price-inner-item:not(:last-child) {
   margin-bottom: 20px;
 }
-.prices-btn {
+.price-inner-service {
+  order: -1;
+}
+
+.price-btn {
   display: block;
   margin: 0 auto;
 }
@@ -262,10 +330,17 @@ button {
 .benefits {
 }
 .benefits-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 .benefits-item {
+  padding: 20px 24px;
   background: #f7f7f7;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+  width: 170px;
+  height: 133px;
 }
 .benefits-value {
   font-family: "Open Sans";
@@ -303,7 +378,14 @@ button {
 }
 .team-item {
 }
+.team-wrapper {
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  gap: 10px;
+}
 .barbers-name {
+  margin-bottom: 3px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -314,6 +396,7 @@ button {
   color: var(--secondary-txt-cl);
 }
 .barbers-extreme {
+  margin-bottom: 30px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -323,13 +406,45 @@ button {
   letter-spacing: 0.02em;
   color: var(--accent-txt-cl);
 }
+/* Media icon */
+.media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.media-item {
+  /* list-style: none; */
+}
+.media-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: white;
+  border-radius: 50%;
+  color: var(--main-bg-cl);
+}
+.media-link:hover {
+  color: var(--accent-txt-cl);
+}
+.media-icon {
+  fill: currentColor;
+}
+
 /* Gallery section */
+
 /* Booking section */
-.page-wrap {
+.page-wrapper {
   background-color: var(--main-bg-cl);
   display: flex;
   justify-content: center;
   gap: 30px;
+  background-image: url(../images/contacts/bg-img2.png);
+  background-repeat: no-repeat;
+  background-position: top left calc(50% + 408px);
+  background-size: contain;
 }
 .booking-section {
   background-color: var(--main-bg-cl);
@@ -337,10 +452,14 @@ button {
 }
 /* Contacts */
 .contacts {
-  background-color: #111319;
+  padding-left: 100px;
   flex-basis: 570px;
 }
+.contacts-details {
+  margin-bottom: 72px;
+}
 .contacts-adress {
+  display: block;
   font-family: var(--primary-font);
   font-weight: 700;
   font-size: 18px;
@@ -348,7 +467,10 @@ button {
   letter-spacing: 0.02em;
   color: var(--main-txt-grey);
 }
-.contacts-info {
+.contacts-link {
+  display: flex;
+  align-items: center;
+  gap: 16px;
   font-family: var(--primary-font);
   font-weight: 400px;
   font-size: 18px;
@@ -356,6 +478,10 @@ button {
   align-items: center;
   letter-spacing: 0.02em;
   color: #9da4bd;
+}
+.contacts-link:not(:last-child),
+.contacts-adress:not(:last-child) {
+  margin-bottom: 20px;
 }
 /* Footer */
 .footer-copyright {
