--- a/css/styles.css
+++ b/css/styles.css
@@ -151,9 +151,11 @@ button {
 
 /* Header */
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
   padding-top: 22px;
   padding-bottom: 22px;
-  background-color: var(--main-bg-cl);
 }
 .header-container {
   display: flex;
@@ -177,6 +179,7 @@ button {
 }
 .header-nav-link,
 .header-contact {
+  position: relative;
   display: block;
   padding: 30px 0;
   font-weight: 600;
@@ -193,6 +196,16 @@ button {
 .header-contact:hover,
 .header-contact:focus {
   color: var(--accent-txt-cl);
+}
+.header-nav-link::after {
+  display: block;
+  position: absolute;
+  bottom: 15px;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--accent-txt-cl);
 }
 /* Hero */
 .hero {
