--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@
   /* Other */
   --indent: 30px;
   --items: 3;
+  /* Animation */
+  --anim-fast: 300ms ease;
+  --anim-slow: 600ms ease;
 }
 /* Base styles */
 body {
@@ -122,6 +125,7 @@ button {
   min-width: 160px;
   min-height: 40px;
   padding: 11px 19px;
+
   font-family: inherit;
   font-weight: 600;
   font-size: 12px;
@@ -129,10 +133,15 @@ button {
   letter-spacing: 0.09em;
   text-transform: uppercase;
   color: var(--light-txt-cl);
+
   background-color: transparent;
   cursor: pointer;
   border: 1px solid #ff6c00;
   border-radius: 25px;
+
+  transition: 300ms ease;
+  transition-property: color, background-color;
+  transition-duration: 300ms;
 }
 .btn:hover,
 .btn:focus {
@@ -156,6 +165,14 @@ button {
   top: 0;
   padding-top: 22px;
   padding-bottom: 22px;
+
+  transition: background-color 300ms ease, backdrop-filter 300ms ease;
+
+  z-index: 10;
+}
+.header.no-transparency {
+  background-color: rgba(17, 19, 25, 0.4);
+  backdrop-filter: blur(3px);
 }
 .header-container {
   display: flex;
@@ -166,6 +183,10 @@ button {
 }
 .header-logo-img {
   fill: var(--secondary-txt-cl);
+  transition: fill 300ms ease;
+}
+.header.no-transparency .header-logo-img {
+  fill: var(--light-txt-cl);
 }
 .header-nav {
   margin-right: auto;
@@ -180,13 +201,18 @@ button {
 .header-nav-link,
 .header-contact {
   position: relative;
+
   display: block;
   padding: 30px 0;
+
   font-weight: 600;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.1em;
+
   color: var(--light-txt-cl);
+
+  transition: color var(--anim-fast);
 }
 .header-contact {
   margin-right: 40px;
@@ -197,16 +223,87 @@ button {
 .header-contact:focus {
   color: var(--accent-txt-cl);
 }
+
 .header-nav-link::after {
-  display: block;
+  content: "";
+
   position: absolute;
   bottom: 15px;
-  content: "";
+  left: 0;
+
+  display: block;
   width: 100%;
   height: 4px;
+
   border-radius: 4px;
-  background-color: var(--accent-txt-cl);
+
+  transform: scaleX(0);
+  transition: transform var(--anim-slow);
 }
+.header-nav-link.active::after {
+  background-color: #ff6c00;
+  transform: scaleX(100%);
+}
+.header-nav-link:hover::after {
+  background-color: #ff6c00;
+  transform: scaleX(100%);
+}
+.header-btn {
+  animation: bounce-top 0.9s both;
+}
+@keyframes bounce-top {
+  0% {
+    -webkit-transform: translateY(-45px);
+    transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    -webkit-transform: translateY(-24px);
+    transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  65% {
+    -webkit-transform: translateY(-12px);
+    transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  82% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  93% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+}
+
 /* Hero */
 .hero {
 }
@@ -214,6 +311,8 @@ button {
   display: flex;
 }
 .hero-leftside {
+  display: flex;
+  align-items: flex-end;
   width: 100px;
 }
 .hero-rightside {
@@ -230,6 +329,11 @@ button {
   background-position: top right;
   background-repeat: no-repeat;
   background-size: contain;
+
+  perspective: 500px;
+}
+.hero-uppertitle {
+  animation: move-vertical 800ms ease-in-out 500ms both;
 }
 .hero-title {
   font-family: var(--secondary-font);
@@ -239,11 +343,56 @@ button {
   letter-spacing: 0.05em;
   color: var(--light-txt-cl);
   margin-bottom: 20px;
+
+  animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) 2200ms
+    both;
 }
-.hero-text {
+.hero-desc {
   width: 360px;
+  animation: move-vertical 800ms ease-in-out 1300ms both;
+}
+
+@keyframes move-vertical {
+  0% {
+    opacity: o;
+    transform: translateY(calc(100px * var(--direction)));
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.media {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.media::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background: var(--secondary-txt-cl);
 }
 .media-links {
+  display: block;
+
+  padding: 15px 0;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
@@ -251,12 +400,18 @@ button {
   line-height: 1.36;
   letter-spacing: 0.2em;
   color: var(--secondary-txt-cl);
+
+  position: relative;
+  transition: 300ms ease;
 }
 .media-links:hover,
 .media-links:focus {
   color: var(--accent-txt-cl);
 }
-
+.hero-media {
+  transform: rotate(270deg) translateX(40px) translateY(16px);
+  transform-origin: top left;
+}
 .hero-controls {
   display: none;
 }
@@ -422,6 +577,8 @@ button {
 .team-image {
   position: relative;
   overflow: hidden;
+
+  transition: 300ms ease;
 }
 .overlay {
   position: absolute;
@@ -429,8 +586,10 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  transform: translateY(-100%);
-  transition: transform 250ms ease;
+
+  transform: translateY(100%);
+  transition: transform var(--anim-fast);
+
   background-color: rgba(23, 26, 36, 0.3);
   backdrop-filter: blur(2px);
   padding: 20px;
@@ -438,12 +597,12 @@ button {
 .overlay-text {
   color: white;
 }
-.team-image:hover .overlay {
+.team-item:hover .overlay {
   transform: translateX(0);
 }
 
 /* Media icon */
-.media {
+.media-list {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -456,11 +615,14 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+
   width: 44px;
   height: 44px;
   background-color: white;
   border-radius: 50%;
   color: var(--main-bg-cl);
+
+  transition: 400ms ease;
 }
 .media-link:hover {
   color: var(--accent-txt-cl);
@@ -535,8 +697,77 @@ button {
   line-height: 1.36;
   letter-spacing: 0.2em;
   color: var(--secondary-txt-cl);
+
+  transition: 400ms ease;
 }
 .footer-btn:hover,
 .footer-btn:focus {
   color: var(--accent-txt-cl);
+}
+/* Modal */
+.backdrop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  backdrop-filter: blur(2px);
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+
+  transition: opacity var(--anim-fast), visibility var(--anim-fast);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: calc(50%);
+  left: calc(50%);
+  transform: translate(-50%, -50%);
+
+  width: 450px;
+  min-height: 500px;
+  border-radius: 10px;
+  background: var(--light-txt-cl);
+
+  transition: opacity 250ms ease-in, transform 250ms ease-in;
+  transition-delay: 300ms;
+}
+.backdrop.is-hidden .modal {
+  opacity: 0;
+  transform: translate(-50%, -70%);
+  transition-delay: 0;
+}
+.modal-close-btn {
+  position: absolute;
+  top: -18px;
+  right: -18px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 36px;
+  height: 36px;
+  padding: 0;
+
+  border-radius: 50%;
+  border: none;
+  background-color: var(--accent-bg-cl);
+
+  fill: var(--color-cornflower, #e7e9fc);
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.1);
+}
+.modal-close-icon {
 }
