--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,9 @@
   --uppertitle-grey-cl: rgba(157, 164, 189, 0.6);
   --gray-cl-60: #9da4bd99;
   /* Other */
-  --indent: 30px;
-  --items: 3;
+  --indent-vertical: 30px;
+  --indent-horizontal: 64px;
+  --items: 1;
   /* Animation */
   --anim-fast: 300ms ease;
   --anim-slow: 600ms ease;
@@ -67,12 +68,18 @@ button {
   padding: 84px 0;
   /* padding: 120px 0; */
 }
-@media only screen (min-width: 768px) {
+/* Tablet */
+@media only screen and (min-width: 768px) {
   .section {
     padding: 100px 0;
   }
 }
-
+/* Desctop */
+@media only screen and (min-width: 1200px) {
+  .section {
+    padding: 120px 0;
+  }
+}
 .container {
   /* Basic styles */
   min-width: 320px;
@@ -107,6 +114,7 @@ button {
   text-transform: uppercase;
   color: var(--secondary-txt-cl);
 }
+
 .uppertitle::before {
   display: block;
   content: " ";
@@ -124,10 +132,16 @@ button {
   margin-bottom: 20px;
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 42px;
+  font-size: 28px;
   line-height: 49px;
   letter-spacing: 0.05em;
   color: var(--main-txt-cl);
+}
+/* Desctop Screen */
+@media only screen and (min-width: 1200px) {
+  .container {
+    font-size: 42px;
+  }
 }
 .title-light {
   margin-bottom: 44px;
@@ -175,10 +189,13 @@ button {
 .card-set {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--indent);
+  row-gap: var(--indent-horizontal);
+  column-gap: var(--indent-vertical);
 }
 .card-set-item {
-  flex-basis: calc(100%-var(--indent) * (var(--items)-1) / var(--items));
+  flex-basis: calc(
+    100%-var(--indent-vertical) * (var(--items)-1) / var(--items)
+  );
 }
 
 /* Header */
